--- a/app/src/main/res/layout/appbar_layout.xml
+++ b/app/src/main/res/layout/appbar_layout.xml
@@ -2,17 +2,22 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/appbar">
+        android:id="@+id/appbar"
+        android:background="@color/bottomNavColor">
 
         <androidx.appcompat.widget.Toolbar
+            app:titleTextColor="@color/white"
+            android:background="@color/bottomNavColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/toolbar">
+            android:id="@+id/toolbar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         </androidx.appcompat.widget.Toolbar>
 
