--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,19 +7,21 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/bottomNavBar"
         app:menu="@menu/bottommenu"
-        app:labelVisibilityMode="unlabeled">
+        app:labelVisibilityMode="unlabeled"
+        app:itemIconTint="@color/bottom_navigation_icon_color">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"
         android:id="@+id/main_frame">
 
     </FrameLayout>
