--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -16,21 +16,35 @@
             android:layout_height="wrap_content" />
     </ScrollView>
 
-    <Button
-        android:id="@+id/paypalButton"
-        android:layout_width="150dp"
-        android:layout_height="70dp"
-        android:layout_gravity="bottom|center"
-        android:layout_margin="80dp"
-        android:text="Pay" />
+
+
+<!--    <Button-->
+<!--        android:id="@+id/addAccountBtn"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:text="+ Add account" />-->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addAccountBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="30dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add"
+        android:backgroundTint="@color/floatingBtnColor"/>
 
     <Button
-        android:id="@+id/addAccountBtn"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_gravity="bottom"
-        android:layout_margin="10dp"
-        android:text="+ Add account" />
+        android:backgroundTint="@color/floatingBtnColor"
+        android:id="@+id/paypalButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="60dp"
+        android:text="Pay"
+        android:textColor="@color/black"/>
 
 
 </FrameLayout>
