--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,14 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/backgroundColor">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        app:cardElevation="20dp"
+        app:cardBackgroundColor="@color/bottomNavColor">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +33,7 @@
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textColor="@color/colorWhite"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -39,9 +41,11 @@
                 android:id="@+id/username"
                 android:drawableLeft="@drawable/baseline_person_2_24"
                 android:drawablePadding="8dp"
+                android:drawableTint="@color/white"
                 android:hint="Username"
+                android:textColorHint="@color/white"
                 android:padding="8dp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:layout_marginTop="40dp"/>
 
@@ -51,18 +55,22 @@
                 android:id="@+id/password"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
+                android:drawableTint="@color/white"
                 android:hint="Password"
+                android:textColorHint="@color/white"
                 android:inputType="textPassword"
                 android:padding="8dp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:layout_marginTop="20dp"/>
 
             <Button
+                android:backgroundTint="@color/floatingBtnColor"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:id="@+id/loginBtn"
                 android:text="Login"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
                 app:cornerRadius = "20dp"/>
@@ -77,7 +85,7 @@
         android:id="@+id/forgetPasswordText"
         android:gravity="center"
         android:text="Forget password?"
-        android:textColor="@color/black"/>
+        android:textColor="@color/colorWhite"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -87,7 +95,7 @@
         android:textSize="14sp"
         android:textAlignment="center"
         android:id="@+id/signupText"
-        android:textColor="@color/black"
+        android:textColor="@color/colorWhite"
         android:layout_marginBottom="20dp"/>
 
 
