--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="CustomDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:background">#1A2029</item>
+    </style>
 
 </resources>
